meta for multiple season, goodness s30

--- a/episodes/season_11.yml
+++ b/episodes/season_11.yml
@@ -3,9 +3,9 @@ episodes:
 - title: Beyond Blunderdome
   season: 11
   episode: 1
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-09-26
+  directors: ["Steven Dean Moore"]
+  writers: ["Mike Scully"]
   description: Studio executives panic when actor Mel Gibson taps Homer to help him
     retool his latest film.
   disneyplus_id: 51a94205-716d-4276-b609-6bee5ae6e993
@@ -15,9 +15,9 @@ episodes:
 - title: Brother's Little Helper
   season: 11
   episode: 2
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-10-03
+  directors: ["Mark Kirkland"]
+  writers: ["George Meyer"]
   description: Bart is diagnosed with Attention Deficit Disorder and placed on medication
     that quells his disruptive behavior.
   disneyplus_id: 66fa7298-1240-43a9-bb52-a74dc9ad59ee
@@ -27,9 +27,9 @@ episodes:
 - title: Guess Who's Coming to Criticize Dinner
   season: 11
   episode: 3
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-10-24
+  directors: ["Nancy Kruse"]
+  writers: ["Al Jean"]
   description: Homer becomes the Springfield Shopper's new food critic, but raises
     the ire of restaurateurs by panning their cooking.
   disneyplus_id: a34950c4-0127-4fba-b78a-1bd91e9ce551
@@ -39,9 +39,9 @@ episodes:
 - title: Treehouse of Horror X
   season: 11
   episode: 4
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-10-31
+  directors: ["Pete Michels"]
+  writers: ["Donick Cary", "Tim Long", "Ron Hauge"]
   description: Homer's Y2K error plunges the Earth into chaos; Bart and Lisa become
     superheroes and attempt to save Lucy Lawless from a super-villain; someone terrorizes
     the family after Marge kills Ned Flanders.
@@ -52,9 +52,9 @@ episodes:
 - title: E-I-E-I-(Annoyed Grunt)
   season: 11
   episode: 5
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-11-07
+  directors: ["Bob Anderson"]
+  writers: ["Ian Maxtone-Graham"]
   description: The Simpsons relocate to a farm, where Homer produces a tomato that
     is highly addictive.
   disneyplus_id: 4e4cc6d6-b29e-4c57-8ce2-4fe36f2b2e5b
@@ -64,9 +64,9 @@ episodes:
 - title: Hello Gutter, Hello Fadder
   season: 11
   episode: 6
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-11-14
+  directors: ["Mike B. Anderson"]
+  writers: ["Al Jean"]
   description: Homer becomes an instant celebrity when he bowls a perfect game.  But
     when his fame fades away, he lavishes his time on baby Maggie.
   disneyplus_id: 676796b5-1bb2-4f80-a6e6-b954950c2c85
@@ -76,9 +76,9 @@ episodes:
 - title: Eight Misbehavin'
   season: 11
   episode: 7
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-11-21
+  directors: ["Steven Dean Moore"]
+  writers: ["Matt Selman"]
   description: Apu is driven to the brink when his wife, Manjula, gives birth to octuplets.
   disneyplus_id: 634f7da4-8b3a-46c3-b430-76727eb16fef
   simpsonsworld_id: 306920003903
@@ -87,9 +87,9 @@ episodes:
 - title: Take My Wife, Sleaze
   season: 11
   episode: 8
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-11-28
+  directors: ["Neil Affleck"]
+  writers: ["John Swartzwelder"]
   description: Homer wins a vintage motorcycle during a dance contest - and attracts
     the attention of Hell's Satans when he forms his own gang.
   disneyplus_id: 8a0511a7-ba04-4454-b63b-28f8916d677c
@@ -99,9 +99,9 @@ episodes:
 - title: Grift of the Magi
   season: 11
   episode: 9
-  release_date:
-  directors:
-  writers:
+  release_date: 1999-12-19
+  directors: ["Matthew Nastuk"]
+  writers: ["Tom Martin"]
   description: As the Christmas holiday approaches... Springfield Elementary closes
     its doors for financial reasons, only to reopen when a mysterious organization
     steps in to help.
@@ -112,9 +112,9 @@ episodes:
 - title: Little Big Mom
   season: 11
   episode: 10
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-01-09
+  directors: ["Mark Kirkland"]
+  writers: ["Carolyn Omine"]
   description: Lisa becomes mother-of-the-house when Marge is hospitalized with a
     broken leg.
   disneyplus_id: a8d8e5e8-bdb5-4f66-b1cc-de7e0bf648c7
@@ -124,9 +124,9 @@ episodes:
 - title: Faith Off
   season: 11
   episode: 11
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-01-16
+  directors: ["Nancy Kruse"]
+  writers: ["Frank Mula"]
   description: Bart believes he has the power to heal the sick.
   disneyplus_id: 3f6ee369-ee77-4e31-8bb4-1db00856908a
   simpsonsworld_id: 300909123775
@@ -135,9 +135,9 @@ episodes:
 - title: The Mansion Family
   season: 11
   episode: 12
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-01-23
+  directors: ["Michael Polcino"]
+  writers: ["John Swartzwelder"]
   description: The Simpsons care for Burns' mansion when the billionaire leaves town
     for a medical exam.
   disneyplus_id: 1ea1b7a7-bc53-4895-b7b9-390e6c371fd6
@@ -147,9 +147,9 @@ episodes:
 - title: Saddlesore Galactica
   season: 11
   episode: 13
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-02-06
+  directors: ["Lance Kramer"]
+  writers: ["Tim Long"]
   description: When Homer and Bart transform a loser racehorse into a champion, rival
     jockeys threaten revenge.
   disneyplus_id: 472ef84f-0b34-4e34-870e-e31843d98194
@@ -159,9 +159,9 @@ episodes:
 - title: Alone Again Natura-Diddily
   season: 11
   episode: 14
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-02-13
+  directors: ["Jim Reardon"]
+  writers: ["Ian Maxtone-Graham"]
   description: Homer attempts to help when Flanders experiences a tragic loss.
   disneyplus_id:
   simpsonsworld_id: 288077891629
@@ -170,9 +170,9 @@ episodes:
 - title: Missionary Impossible
   season: 11
   episode: 15
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-02-20
+  directors: ["Steven Dean Moore"]
+  writers: ["Ron Hauge"]
   description: Homer is forced to become a missionary on a remote island after he
     pledges a large sum of money to PBS.
   disneyplus_id: f40944fc-3c09-48d9-9af7-5be976b9d51c
@@ -182,9 +182,9 @@ episodes:
 - title: Pygmoelian
   season: 11
   episode: 16
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-02-27
+  directors: ["Mark Kirkland"]
+  writers: ["Larry Doyle"]
   description: Moe undergoes plastic surgery and becomes a hot new soap opera star.
   disneyplus_id: c116ee6a-7621-4cf8-822f-d9de5f159905
   simpsonsworld_id: 294758467783
@@ -193,9 +193,9 @@ episodes:
 - title: Bart to the Future
   season: 11
   episode: 17
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-03-19
+  directors: ["Michael Marcantel"]
+  writers: ["Dan Greaney"]
   description: A Native American casino manager shows Bart a glimpse into the future...
     a time when Bart is an over-the-hill moocher and Lisa is President of the United
     States.
@@ -206,9 +206,9 @@ episodes:
 - title: Days of Wine and D'Ohses
   season: 11
   episode: 18
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-04-09
+  directors: ["Neil Affleck"]
+  writers: ["Deb Lacusta", "Dan Castellaneta"]
   description: Barney swears off alcohol, creating a rift between he and Homer; seeking
     to win a contest, Bart and Lisa attempt to photograph a new cover for the Springfield
     phone book.
@@ -219,9 +219,9 @@ episodes:
 - title: Kill the Alligator and Run
   season: 11
   episode: 19
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-04-30
+  directors: ["Jen Kamerman"]
+  writers: ["John Swartzwelder"]
   description: The Simpsons find themselves on the run from the law after they accidentally
     kill a beloved alligator while vacationing in Florida.
   disneyplus_id: 0d9af443-5878-47d7-85cd-cfbf013953bf
@@ -231,9 +231,9 @@ episodes:
 - title: Last Tap Dance in Springfield
   season: 11
   episode: 20
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-05-07
+  directors: ["Nancy Kruse"]
+  writers: ["Julie Thacker"]
   description: After watching a movie about a sexy tango dancer, Lisa enrolls in a
     tap dance class... only to discover she has two left feet; Bart and Milhouse abandon
     a camping trip and hide out in a shopping mall.
@@ -244,9 +244,9 @@ episodes:
 - title: It's a Mad, Mad, Mad, Mad Marge
   season: 11
   episode: 21
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-05-14
+  directors: ["Steven Dean Moore"]
+  writers: ["Larry Doyle"]
   description: When Otto ditches his fiancée at the altar, Bart invites her to stay
     with the family... forcing Marge to compete with the much younger woman.
   disneyplus_id: 8567caad-39f1-4f5d-9866-2f1540bd9e12
@@ -256,9 +256,9 @@ episodes:
 - title: Behind the Laughter
   season: 11
   episode: 22
-  release_date:
-  directors:
-  writers:
+  release_date: 2000-05-21
+  directors: ["Mark Kirkland"]
+  writers: ["Tim Long", "George Meyer", "Mike Scully", "Matt Selman"]
   description: This 'behind-the-scenes' special chronicles the ups and downs of America's
     favorite sitcom family.
   disneyplus_id: 767915dc-10a7-4a1d-ba3f-65ab847a98fb
