--- a/episodes/season_06.yml
+++ b/episodes/season_06.yml
@@ -112,7 +112,7 @@ episodes:
   episode: 10
   release_date: 1994-12-04
   directors: ["Wes Archer"]
-  writers: ["Bill Okaley", "Josh Weinstein"]
+  writers: ["Bill Oakley", "Josh Weinstein"]
   description: While selling a homemade tonic guaranteed to increase sexual desire
     in men, Grampa reveals that Homer's conception was accidental.
   disneyplus_id: 7b7cd73e-4de3-40e8-bcbd-f7cee25bfa6f
@@ -124,7 +124,7 @@ episodes:
   episode: 11
   release_date: 1994-12-18
   directors: ["Mark Kirkland"]
-  writers: ["Dvid Sacks"]
+  writers: ["David Sacks"]
   description: Marge seeks professional help from a psychiatrist after realizing she
     is afraid to fly.
   disneyplus_id: 8575c33f-e73d-40a8-8fa2-c91b65a9710f
